// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField renders correctly > when disabled 1`] = `
<div
  aria-busy={false}
  className="textField disabled"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={true}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > when loading 1`] = `
<div
  aria-busy={true}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="loaderContainer"
      >
        <div
          className="loader"
        >
          <div
            className="loaderContainer"
            data-testid="loader"
            role="alert"
            title="loading"
          >
            <svg
              aria-hidden={true}
              className="circleLoaderSpinner loaderSvg"
              viewBox="0 0 50 50"
            >
              <circle
                className="circleLoaderSpinnerPath"
                cx="25"
                cy="25"
                fill="none"
                r="20"
                strokeWidth="5"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > when readonly 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input readOnly"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={true}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > when required 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={true}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={true}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with another type 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="password"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with className 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="testClassName input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with date type 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="date"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with date-time type 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="datetime-local"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with email type 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="email"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with icon 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input inputHasIcon"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="clickable iconContainer iconContainerHasIcon iconContainerActive disableTextSelection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        tabIndex={-1}
      >
        <svg
          aria-hidden={true}
          className="icon icon"
          data-testid="icon"
          data-vibe="Icon"
          fill="currentColor"
          height="16px"
          viewBox="0 0 20 20"
          width="16px"
        >
          <path
            clipRule="evenodd"
            d="M11.234 3.016a1.379 1.379 0 0 0-2.47 0l-1.78 3.61-3.99.584h-.003a1.376 1.376 0 0 0-.754 2.348v.001l2.878 2.813-.68 3.97v.001a1.376 1.376 0 0 0 2.005 1.45L10 15.921l3.549 1.866a1.377 1.377 0 0 0 2.005-1.45v-.001l-.68-3.97 2.882-2.81v-.001a1.377 1.377 0 0 0-.753-2.348l-3.989-.58-1.78-3.61Zm-1.235.888L8.3 7.35a1.378 1.378 0 0 1-1.034.752l-3.803.557 2.747 2.685a1.376 1.376 0 0 1 .395 1.22l-.649 3.79 3.404-1.79a1.377 1.377 0 0 1 1.28 0l3.395 1.785-.65-3.79v-.002a1.374 1.374 0 0 1 .396-1.218l2.751-2.683-3.796-.554a1.382 1.382 0 0 1-1.037-.752L10 3.904Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with iconsNames 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with id 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_testId"
        data-vibe="TextField"
        disabled={false}
        id="testId"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with labelIconName 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with large size 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeLarge"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with placeholder 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label="placeholder"
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder="placeholder"
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with role 1`] = `
<div
  aria-busy={false}
  className="textField"
  role="button"
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with secondaryIconName 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input inputHasIcon"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="clickable iconContainer iconContainerHasIcon disableTextSelection"
        data-testid="text-field-secondary-button_input"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        tabIndex={-1}
      >
        <svg
          aria-hidden={true}
          className="icon icon"
          data-testid="icon"
          data-vibe="Icon"
          fill="currentColor"
          height="16px"
          viewBox="0 0 20 20"
          width="16px"
        >
          <path
            clipRule="evenodd"
            d="M8.65191 2.37299C6.9706 2.37299 5.35814 3.04089 4.16927 4.22976C2.9804 5.41863 2.3125 7.03108 2.3125 8.7124C2.3125 10.3937 2.9804 12.0062 4.16927 13.195C5.35814 14.3839 6.9706 15.0518 8.65191 15.0518C10.0813 15.0518 11.4609 14.5691 12.5728 13.6939L16.4086 17.5303C16.7014 17.8232 17.1763 17.8232 17.4692 17.5303C17.7621 17.2375 17.7622 16.7626 17.4693 16.4697L13.6334 12.6333C14.5086 11.5214 14.9913 10.1418 14.9913 8.7124C14.9913 7.03108 14.3234 5.41863 13.1346 4.22976C11.9457 3.04089 10.3332 2.37299 8.65191 2.37299ZM12.091 12.1172C12.9878 11.2113 13.4913 9.98783 13.4913 8.7124C13.4913 7.42891 12.9815 6.19798 12.0739 5.29042C11.1663 4.38285 9.9354 3.87299 8.65191 3.87299C7.36842 3.87299 6.1375 4.38285 5.22993 5.29042C4.32237 6.19798 3.8125 7.42891 3.8125 8.7124C3.8125 9.99589 4.32237 11.2268 5.22993 12.1344C6.1375 13.0419 7.36842 13.5518 8.65191 13.5518C9.92736 13.5518 11.1509 13.0483 12.0568 12.1514C12.0623 12.1455 12.0679 12.1397 12.0737 12.134C12.0794 12.1283 12.0851 12.1227 12.091 12.1172Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with showCharCount 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
    <div
      className="typography secondary start singleLineEllipsis text text2Normal subTextContainer"
      data-testid="text"
    >
      <span
        aria-label="Input char count"
        className="counter"
      >
        0
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          Maximum of null characters
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with tel type 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="tel"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with url type 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="url"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with validation 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall inputErrorValidation"
    >
      <input
        aria-activedescendant=""
        aria-invalid={true}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
    <div
      className="typography secondary start singleLineEllipsis text text2Normal subTextContainer"
      data-testid="text"
    >
      <span
        className="subTextContainerStatus"
      >
        error
      </span>
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with value 1`] = `
<div
  aria-busy={false}
  className="textField"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value="value"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly > with wrapperClassName 1`] = `
<div
  aria-busy={false}
  className="textField testClassName"
  role=""
>
  <div
    className="labelWrapper"
  >
    <div
      className="inputWrapper wrapperSizeSmall"
    >
      <input
        aria-activedescendant=""
        aria-invalid={false}
        aria-label=""
        aria-owns=""
        aria-required={false}
        autoComplete="off"
        className="input"
        data-testid="text-field_input"
        data-vibe="TextField"
        disabled={false}
        id="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onWheel={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
